--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "gulp-sass": "^4.1.0",
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.6.0"
+  },
+  "dependencies": {
+    "@fancyapps/ui": "^4.0.5",
+    "swiper": "^7.0.6"
   }
 }
